# Bebeu

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  justfile
.claude/adr/: 0001-adopt-feature-sliced-design.md  0002-synchronous-only-data-flow.md  0003-aggregate-root-as-slice.md  0004-refresh-trigger-wrapping-counter.md  0005-webview-asset-handler-cache.md  0006-pivot-marker-exclusive-drag.md  0007-drag-client-coordinates.md  0008-navigation-guard-for-unsaved-edits.md  0009-keyboard-shortcut-dispatch.md  0010-session-scope-snapshot-history.md  0011-filesystem-yaml-as-primary-storage.md  0012-two-tier-configuration-files.md  0013-toast-css-animation-auto-dismiss.md  0014-frame-override-three-state-encoding.md  0015-image-cache-busting-url-query.md  0016-engine-config-hybrid-placement.md  0017-world-axes-and-25d-projection.md  0018-screen-space-aabb-hit-detection.md  0019-frame-event-se-with-soundgroup-pick.md  0020-pending-imports-unmount-rollback.md  0021-world-3d-aabb-with-per-box-depth.md  0022-level-area-one-side-parallel-trapezoid-or.md  0023-image-pixel-world-screen-unification.md  0024-knockback-gauge-attackboxmeta-driven-hit.md  0025-knockback-flow-single-action-animation-resolution.md  0026-pixel-perfect-via-intermediate-render-target.md  0027-jump-and-aerial-combat.md  0028-guard-gauge-and-guard-break.md  0029-hud-layout-in-project-yaml.md  0030-multi-player-hud-targeting.md  0031-enemy-hp-bar-and-engagement-tracking.md  0032-enemy-overhead-hp-bar-world-anchored.md  0033-player-icon-hud.md  (+10 more)
docsite/: index.md  package-lock.json  package.json
tools/asset-gen/: Cargo.toml
tools/asset-gen/src/: main.rs
tools/migrate-animation-ticks/: Cargo.toml
tools/migrate-animation-ticks/src/: main.rs
(+97 files in other folders)
