[package]
name = "asset-gen"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
publish = false
description = "Generate placeholder CC0 sprites and sounds for sample-projects."

[[bin]]
name = "asset-gen"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
png = "0.18"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"

[lints.rust]
unsafe_code = "forbid"
